compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_custom_component_with_children.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1667
expression: "\npub fn main() {\n   <c.parent_component>\n       <c.child_component>\n           Child content goes here.\n       </c.child_component>\n       <c.child_component>\n           Another child content.\n       </c.child_component>\n   </c.parent_component>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 247,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 245,
                                    },
                                    tag: None,
                                    body: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 40,
                                                end: 48,
                                            },
                                            value: "\n       ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 48,
                                                end: 131,
                                            },
                                            tag: None,
                                            body: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 67,
                                                        end: 111,
                                                    },
                                                    value: "\n           Child content goes here.\n       ",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 131,
                                                end: 139,
                                            },
                                            value: "\n       ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 139,
                                                end: 220,
                                            },
                                            tag: None,
                                            body: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 158,
                                                        end: 200,
                                                    },
                                                    value: "\n           Another child content.\n       ",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 220,
                                                end: 224,
                                            },
                                            value: "\n   ",
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            16,
            245,
            247,
        ],
    },
}
