compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_custom_component_with_conditional.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   let show_details = true\n\n   <c.toggle_component>\n       {case show_details { True -> <p>Details are shown!</p> False -> <p>No details to show.</p>}}\n   </c.toggle_component>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 195,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 43,
                                    },
                                    value: Var {
                                        location: SrcSpan {
                                            start: 39,
                                            end: 43,
                                        },
                                        name: "true",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 36,
                                        },
                                        name: "show_details",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 48,
                                        end: 193,
                                    },
                                    tag: None,
                                    content: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 68,
                                                end: 76,
                                            },
                                            value: "\n       ",
                                        },
                                        Case {
                                            location: SrcSpan {
                                                start: 77,
                                                end: 167,
                                            },
                                            subjects: [
                                                Var {
                                                    location: SrcSpan {
                                                        start: 82,
                                                        end: 94,
                                                    },
                                                    name: "show_details",
                                                },
                                            ],
                                            clauses: [
                                                Clause {
                                                    location: SrcSpan {
                                                        start: 97,
                                                        end: 130,
                                                    },
                                                    pattern: [
                                                        Constructor {
                                                            location: SrcSpan {
                                                                start: 97,
                                                                end: 101,
                                                            },
                                                            name: "True",
                                                            arguments: [],
                                                            module: None,
                                                            constructor: Unknown,
                                                            spread: None,
                                                            type_: (),
                                                        },
                                                    ],
                                                    alternative_patterns: [],
                                                    guard: None,
                                                    then: Html {
                                                        location: SrcSpan {
                                                            start: 105,
                                                            end: 130,
                                                        },
                                                        tag: None,
                                                        content: [
                                                            HtmlText {
                                                                location: SrcSpan {
                                                                    start: 108,
                                                                    end: 126,
                                                                },
                                                                value: "Details are shown!",
                                                            },
                                                        ],
                                                        arguments: [],
                                                    },
                                                },
                                                Clause {
                                                    location: SrcSpan {
                                                        start: 131,
                                                        end: 166,
                                                    },
                                                    pattern: [
                                                        Constructor {
                                                            location: SrcSpan {
                                                                start: 131,
                                                                end: 136,
                                                            },
                                                            name: "False",
                                                            arguments: [],
                                                            module: None,
                                                            constructor: Unknown,
                                                            spread: None,
                                                            type_: (),
                                                        },
                                                    ],
                                                    alternative_patterns: [],
                                                    guard: None,
                                                    then: Html {
                                                        location: SrcSpan {
                                                            start: 140,
                                                            end: 166,
                                                        },
                                                        tag: None,
                                                        content: [
                                                            HtmlText {
                                                                location: SrcSpan {
                                                                    start: 143,
                                                                    end: 162,
                                                                },
                                                                value: "No details to show.",
                                                            },
                                                        ],
                                                        arguments: [],
                                                    },
                                                },
                                            ],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 168,
                                                end: 172,
                                            },
                                            value: "\n   ",
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            44,
        ],
        new_lines: [
            0,
            16,
            43,
            44,
            193,
            195,
        ],
    },
}
