compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_custom_component_with_props.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   let title = \"My Title\"\n   let description = \"This is a description.\"\n\n   <c.card title={title} description={description}>\n       <p>This is the card content.</p>\n   </c.card>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 196,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 42,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 32,
                                            end: 42,
                                        },
                                        value: "My Title",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 29,
                                        },
                                        name: "title",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 46,
                                        end: 88,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 64,
                                            end: 88,
                                        },
                                        value: "This is a description.",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 50,
                                            end: 61,
                                        },
                                        name: "description",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 93,
                                        end: 194,
                                    },
                                    tag: None,
                                    content: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 141,
                                                end: 149,
                                            },
                                            value: "\n       ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 149,
                                                end: 181,
                                            },
                                            tag: None,
                                            content: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 152,
                                                        end: 177,
                                                    },
                                                    value: "This is the card content.",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 181,
                                                end: 185,
                                            },
                                            value: "\n   ",
                                        },
                                    ],
                                    arguments: [
                                        HtmlTagAttr {
                                            attr: "title",
                                            location: SrcSpan {
                                                start: 101,
                                                end: 114,
                                            },
                                            value: Some(
                                                Var {
                                                    location: SrcSpan {
                                                        start: 108,
                                                        end: 113,
                                                    },
                                                    name: "title",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "description",
                                            location: SrcSpan {
                                                start: 115,
                                                end: 140,
                                            },
                                            value: Some(
                                                Var {
                                                    location: SrcSpan {
                                                        start: 128,
                                                        end: 139,
                                                    },
                                                    name: "description",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            89,
        ],
        new_lines: [
            0,
            16,
            42,
            88,
            89,
            194,
            196,
        ],
    },
}
